--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -24,6 +24,70 @@ nav
       ul
         li
           a title="Дізнатись все про решітковий настил" решітковий настил
+          ul
+            li
+              a Зварний решітковий настил
+              ul
+                li 
+                  a
+                    .img-container
+                      .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+                    p приклади застосування
+                    = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
+            li
+              a Пресований решітковий настил
+              ul
+                li 
+                  a
+                    .img-container
+                      .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+                    p приклади застосування
+                    = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
+            li
+              a Сходи
+              ul
+                li 
+                  a
+                    .img-container
+                      .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+                    p приклади застосування
+                    = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
+            li
+              a Кріплення
+              ul
+                li 
+                  a
+                    .img-container
+                      .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+                    p приклади застосування
+                    = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
+            li
+              a Просічно-витяжний лист
+              ul
+                li 
+                  a
+                    .img-container
+                      .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+                    p приклади застосування
+                    = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
+            li 
+              a Розробка КМФ
+              ul
+                li 
+                  a
+                    .img-container
+                      .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+                    p приклади застосування
+                    = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
+            li
+              a Решітковий настил “Serrated”
+              ul
+                li 
+                  a
+                    .img-container
+                      .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
+                    p приклади застосування
+                    = inline_svg ('icons/ZRN-icons-arrow-right-v1.svg')
         li
           a title="Дізнатись все про сходові марші" сходові марші
         li
