--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -12,7 +12,7 @@ body
   font-family: 'PT Sans', sans-serif
   .main-wrapper
     flex: 1
-  &.menu-opened
+  &.hidden
     overflow: hidden
 
 @each $header, $font-size in (h1: 28px, h2: 24px, h3: 22px, h4: 20px, h5: 18px, h6: 16px)
