--- a/app/assets/stylesheets/page-components/menu.sass
+++ b/app/assets/stylesheets/page-components/menu.sass
@@ -1,10 +1,10 @@
-// .menu-wrapper
-//   position: fixed
-//   display: flex
-//   flex-direction: row
-//   align-items: stretch
-//   z-index: 10
-//   width: 100%
-//   min-height: 100vh
-//   overflow: hidden
-//   pointer-events: none
+.menu-wrap
+  position: fixed
+  width: 100%
+  height: 100vh
+  overflow: auto
+  z-index: 11
+  background: $dark
+  display: none
+  &.opened
+    display: block
