--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -18,8 +18,9 @@ nav
         p.smalelr title="Перемкнути мову" en
 
   .main
-    a.logo-container title="Повернутись на головну"
+    a.logo-container title="Повернутись на головну" href=root_path
       = inline_svg ('icons/ZRN-logo-v1.svg')
+      = inline_svg ('icons/logo-mobile.svg')
     .menu-container
       ul
         li
