--- a/app/views/application/_menu.html.slim
+++ b/app/views/application/_menu.html.slim
@@ -1,3 +1,40 @@
 .menu-wrap
 
-  
+  .menu-top
+    a.logo-container href=root_path
+      = inline_svg ('icons/logo-mobile.svg')
+    .close-menu
+      = inline_svg ('icons/ZRN-icons-close-v1.svg')
+
+  a Решітковий настил
+
+  ul
+    li
+      a Зварний решітковий настил
+    li
+      a Пресований решітковий настил
+    li
+      a Сходи
+    li
+      a Кріплення
+    li
+      a Просічно витяжний лист
+    li
+      a Розробка КМД
+    li
+      a Решітковий настил “serrated”
+
+  a Сходові марші
+  a Монтаж
+  a Технічний довідник
+  a Калькулятор
+
+  ul
+    li
+      a Про нас
+    li
+      a Статті
+    li
+      a Новини
+    li
+      a Контакти
