--- a/app/assets/stylesheets/page-components/header.sass
+++ b/app/assets/stylesheets/page-components/header.sass
@@ -65,10 +65,17 @@ nav
       svg
         width: 100%
         height: 100%
+        @media #{$small-only}
+          &:first-child
+            display: none
+          &:last-child
+            fill: $green
+        @media #{$medium-up}
+          &:last-child
+            display: none
       @media #{$small-only}
-        width: 100px
-      @media #{$large-up}
-        padding: 20px
+        width: 60px
+        padding: 15px
     .menu-container
       width: 100%
       text-align: right
@@ -178,7 +185,7 @@ nav
 
 
       // show menu
-      @media #{$large-up}
+      @media #{$xlarge-up}
         ul
           display: block
 
@@ -190,5 +197,5 @@ nav
       right: 10px
       @media #{$small-only}
         padding: 5px
-      @media #{$large-up}
+      @media #{$xlarge-up}
         display: none
