--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -1,4 +1,4 @@
-nav
+nav.topnav
 
   .top.clearfix
     p.small.floated
@@ -7,7 +7,7 @@ nav
     .floated-right.clearfix
       ul.floated
         li
-          a title="Дізнайтесь про нас більше" про нас
+          a title="Дізнайтесь про нас більше" href=about_path про нас
         li
           a title="Наші статті" статті
         li
