--- a/app/views/application/_main_banner.html.slim
+++ b/app/views/application/_main_banner.html.slim
@@ -18,5 +18,5 @@
 
         p.regular Eдине підприємство в Україні, що займається виробництвом виключно решіткового настилу. Оскільки, на відміну від конкурентів, це наш єдиний напрямок діяльності, можемо сміливо твердити:
         p.bold Про решітковий настил ми знаємо все!
-        a.btn title="Дізнайтесь про нас більше"
+        a.btn title="Дізнайтесь про нас більше" href=about_path
           | про нас
