--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -15,10 +15,11 @@ body
   &.hidden
     overflow: hidden
 
-@each $header, $font-size in (h1: 28px, h2: 24px, h3: 22px, h4: 20px, h5: 18px, h6: 16px)
+@each $header, $font-size in (h1: 48px, h2: 30px, h3: 24px, h4: 20px, h5: 18px, h6: 16px)
   #{$header}, .#{$header}
     font-size: $font-size
     font-family: 'Segoe'
+    color: $grey900
 
 .small
   font-size: 0.75rem
@@ -30,6 +31,11 @@ body
   font-size: 1.125rem
 .large
   font-size: 1.25rem
+
+.date
+  font-size: 12px
+  color: $blueGrey400
+  text-transform: uppercase
 
 .green-link
   font-size: 12px
