--- a/app/assets/stylesheets/mixins_variables.sass
+++ b/app/assets/stylesheets/mixins_variables.sass
@@ -70,10 +70,10 @@ $dark: #181f2a
 
 =fullsize
   position: absolute
+  width: 100%
+  height: 100%
   top: 0
   left: 0
-  right: 0
-  bottom: 0
 
 =centered-inside
   position: absolute
@@ -139,3 +139,16 @@ $dark: #181f2a
     padding-bottom: $pb-tablet
   @media (min-width: 1920px)
     padding-bottom: $pb-hd
+
+=dimension-block($width,$height,$inner-padding: 20px)
+  position: relative
+  float: left
+  width: calc(#{$width} - 6px)
+  margin: 3px
+  &:before
+    content: ''
+    display: block
+    padding-bottom: $height
+  .inner
+    +fullsize
+    padding: $inner-padding
