--- a/app/assets/stylesheets/page-components/banner.sass
+++ b/app/assets/stylesheets/page-components/banner.sass
@@ -125,12 +125,13 @@
       height: 20px
     .banner-title
       font-family: 'Segoe'
-      font-size: 48px
+      font-size: 60px
       color: white
       text-transform: uppercase
       letter-spacing: 5px
+      line-height: 1
       @media #{$small-only}
-        font-size: 60px
+        font-size: 48px
       @media screen and (min-width:1920px)
         font-size: 72px
   .banner-subtitle
