--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -21,7 +21,7 @@ footer
         p.title дивіться також
         ul.footer-links
           li
-            a title="Дізнайтесь про нас більше" про нас
+            a href=about_path title="Дізнайтесь про нас більше" про нас
           li
             a title="Наші статті" статті
           li
