--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -171,6 +171,11 @@
                 .certificate-img style="background-image: url(#{asset_path('photo/certificate-example.png')})"
                 .donwload-icon = inline_svg ('icons/ZRN-icons-download-v1.svg')
 
+    a.download-all-certificates
+      = inline_svg ('icons/ZRN-icons-download-v1.svg')
+      span.smaller Завантажити всі архівом
+      span.pdf-size 1.8
+
 .remark-wrap
   .row
     .columns
