--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -43,3 +43,18 @@ body
   font-weight: 700
   letter-spacing: 2px
   text-transform: uppercase
+
+.date
+  display: inline-block
+  font-size: 12px
+  color: $blueGrey400
+  font-weight: 700
+  margin-bottom: 10px
+  text-transform: uppercase
+  letter-spacing: 2px
+  span
+    color: $green
+    margin-left: 6px
+    &:before
+      content: '|'
+      margin-right: 6px
