--- a/app/assets/stylesheets/page-components/banner.sass
+++ b/app/assets/stylesheets/page-components/banner.sass
@@ -4,6 +4,7 @@
   position: relative
   width: 100%
   height: 100vh
+  margin-bottom: 50px
 
   .read-more
     +x-align
@@ -130,6 +131,7 @@
       text-transform: uppercase
       letter-spacing: 5px
       line-height: 1
+      margin: 10px 0
       @media #{$small-only}
         font-size: 48px
       @media screen and (min-width:1920px)
