--- a/app/assets/stylesheets/page-components/one.sass
+++ b/app/assets/stylesheets/page-components/one.sass
@@ -5,6 +5,10 @@
     letter-spacing: 2px
     @media #{$small-only}
       margin: 70px 0 20px
+    &:first-child
+      margin: 50px 0 30px
+      @media #{$small-only}
+        margin: 30px 0
 
   & > p
     margin-bottom: 20px
@@ -63,3 +67,59 @@
 
   img
     margin: 30px 0
+  .img-holder
+    position: relative
+    p
+      font-size: 12px
+      color: $dark
+      text-transform: uppercase
+      font-weight: 700
+      position: absolute
+      bottom: 30px
+      right: 0
+      padding: 15px 20px
+      background: $green
+      letter-spacing: 1px
+
+  & > ul
+    margin: 30px 0 50px
+    li
+      position: relative
+      font-weight: 700
+      margin: 20px 0
+      padding-left: 16px
+      &:before
+        content: ''
+        display: block
+        width: 8px
+        height: 2px
+        background: $green
+        position: absolute
+        left: 0
+        top: 10px
+      @media #{$large-up}
+
+.one-wrap
+  +padding-bottom(100px,120px,120px,150px)
+  overflow: hidden
+
+.article-head
+  position: relative
+  &:before
+    content: ''
+    display: block
+    position: absolute
+    width: 200%
+    height: 100%
+    +translate(-30px,0)
+    background: $green
+  .date
+    position: relative
+    color: $dark
+    margin-right: 20px
+  .tag-container
+    display: inline-block
+    li
+      background: $dark
+      color: $green
+
