--- a/app/views/pages/blog.html.slim
+++ b/app/views/pages/blog.html.slim
@@ -1,4 +1,4 @@
-= render "banner"
+= render "banner_inner_page"
 
 .blog-wrap.bottom-indent
 
@@ -81,3 +81,9 @@
 
   .btn-holder
     .show-more-btn підвантажити більше
+
+.remark-wrap
+  .row
+    .columns
+      p.smaller Рекомендуємо також
+      p.title Ламинарный копролит: основные моменты
