--- a/app/views/pages/new_one.html.slim
+++ b/app/views/pages/new_one.html.slim
@@ -8,9 +8,8 @@
       .article-head
         p.date
           | 12 липня, 2017
-        .tag-container
-          ul
-            li корисні поради
+        p.title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio cumque esse laboriosam architecto ea in recusandae debitis repellat, quaerat molestiae sapiente nobis, perspiciatis asperiores omnis rem, voluptas voluptatum sit quisquam!
+        
 
     .columns.large-2.xlarge-3.sticky-side-block
       ul
@@ -55,3 +54,9 @@
         li Деньги Быстрые и безопасные платежи через интернет;
         li Перевод Автоматический перевод текстов и веб-страниц;
         li Почта Без спама, вирусов и рекламы;
+
+.remark-wrap
+  .row
+    .columns
+      p.smaller Наступна новина
+      p.title Ламинарный копролит: основные моменты
