--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -4,7 +4,7 @@ footer
   .main
     .row
       .columns.large-4
-        a.logo-container title="Повернутись на головну" = inline_svg ('icons/ZRN-logo-v1.svg')
+        a.logo-container href=root_path title="Повернутись на головну" = inline_svg ('icons/ZRN-logo-v1.svg')
         p.small Eдине підприємство в Україні, що займається виробництвом виключно решіткового настилу. Оскільки, на відміну від конкурентів, це наш єдиний напрямок діяльності, можемо сміливо твердити: про решітковий настил ми знаємо все!
       .columns.medium-4.large-3
         p.title ми пропонуємо
@@ -23,9 +23,9 @@ footer
           li
             a href=about_path title="Дізнайтесь про нас більше" про нас
           li
-            a title="Наші статті" статті
+            a href=blog_path title="Наші статті" статті
           li
-            a title="Цікаві новини" новини
+            a href=news_path title="Цікаві новини" новини
           li
             a title="Як з нами зконтактувати" контакти
       .columns.medium-4.large-2
