--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -7,11 +7,11 @@ nav.topnav
     .floated-right.clearfix
       ul.floated
         li
-          a title="Дізнайтесь про нас більше" href=about_path про нас
+          a href=about_path title="Дізнайтесь про нас більше" про нас
         li
-          a title="Наші статті" статті
+          a href=blog_path title="Наші статті" статті
         li
-          a title="Цікаві новини" новини
+          a href=news_path title="Цікаві новини" новини
         li
           a title="Як з нами зконтактувати" контакти
       .toggle-language.floated
