--- a/app/views/pages/blog.html.slim
+++ b/app/views/pages/blog.html.slim
@@ -1,6 +1,6 @@
 = render "banner_inner_page"
 
-.blog-wrap.bottom-indent
+.bottom-indent
 
   .row.columns-left
     .columns
@@ -81,9 +81,3 @@
 
   .btn-holder
     .show-more-btn підвантажити більше
-
-.remark-wrap
-  .row
-    .columns
-      p.smaller Рекомендуємо також
-      p.title Ламинарный копролит: основные моменты
