--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -95,7 +95,7 @@
 .media-wrap.clearfix
   .floated
     p.label статті
-    a.see-all-link всі статті
+    a.see-all-link href=blog_path всі статті
     .slider-container
       ul.articles-slider
         li
@@ -110,19 +110,19 @@
           | 12 липня, 2017
           span корисні поради
         p.title Переваги гарячого цинкування кріплень для решіткового настилу кріплень для решіткового настилу
-        a.green-link title="Переглянути статтю повністю" детальніше
+        a.green-link href=blog_one_path title="Переглянути статтю повністю" детальніше
       .slide-description
         p.date
           | 12 липня, 2017
           span корисні поради
         p.title Переваги гарячого цинкування кріплень для решіткового настилу
-        a.green-link title="Переглянути статтю повністю" детальніше
+        a.green-link href=blog_one_path title="Переглянути статтю повністю" детальніше
       .slide-description
         p.date
           | 12 липня, 2017
           span корисні поради
         p.title Переваги гарячого цинкування кріплень для решіткового настилу
-        a.green-link title="Переглянути статтю повністю" детальніше
+        a.green-link href=blog_one_path title="Переглянути статтю повністю" детальніше
       .slider-controls.for-articles
         .slide-prev
           = inline_svg ('icons/ZRN-icons-arrow-left-v1.svg')
@@ -131,33 +131,33 @@
   .floated
     .inner
       p.label новини
-      a.see-all-link всі новини
-      ul
+      a.see-all-link href=news_path всі новини
+      ul.news-list
         li
-          a
+          a href=new_one_path title="Прочитати новину"
             p.date 12 липня, 2017
             p.title Виробництво металоконструкцій ЧЗМК сертифіковане згідно EN 1090 ! металоконструкцій ЧЗМК
         li
-          a
+          a href=new_one_path title="Прочитати новину"
             p.date 12 липня, 2017
             p.title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, minus necessitatibus qui, numquam.
         li
-          a 
+          a href=new_one_path title="Прочитати новину"
             p.date 12 липня, 2017
             p.title Quia voluptas maiores, aliquid aspernatur, at assumenda vero distinctio! at assumenda vero distinctio!
         li
-          a 
+          a href=new_one_path title="Прочитати новину"
             p.date 12 липня, 2017
             p.title Beatae velit dolorum fuga perspiciatis nam praesentium, laboriosam soluta pariatur in. Voluptatum recusandae eos perspiciatis voluptates quidem adipisci libero debitis blanditiis! Nam.
         li
-          a 
+          a href=new_one_path title="Прочитати новину"
             p.date 12 липня, 2017
             p.title Ullam voluptatibus ducimus nam mollitia, dicta maiores est ipsa et alias ipsam asperiores ab, ea minima id.
         li
-          a 
+          a href=new_one_path title="Прочитати новину"
             p.date 12 липня, 2017
             p.title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque mollitia cupiditate. Illum, natus, similique! Quaerat molestiae officiis excepturi et sunt enim.
         li
-          a 
+          a href=new_one_path title="Прочитати новину"
             p.date 12 липня, 2017
             p.title Error nihil alias praesentium recusandae incidunt vitae animi inventore, exercitationem ut! Deserunt nemo dicta eius sint, perferendis quod, culpa praesentium ex minima!
