--- a/app/assets/stylesheets/mixins_variables.sass
+++ b/app/assets/stylesheets/mixins_variables.sass
@@ -91,11 +91,13 @@ $dark: #181f2a
 =img-container($padding-bottom: 56%)
   position: relative
   width: 100%
-  height: 0
-  padding-bottom: $padding-bottom
   background-size: cover
   background-position: center
   background-repeat: no-repeat
+  &:before
+    content: ''
+    display: block
+    padding-bottom: $padding-bottom
 
 =x-align
   position: absolute
