--- a/app/assets/stylesheets/page-components/banner.sass
+++ b/app/assets/stylesheets/page-components/banner.sass
@@ -42,6 +42,7 @@
         height: 80px
 
   .inner-text
+    width: 100%
     position: relative
     top: 50%
     +translate(0,-50%)
@@ -119,6 +120,7 @@
     +x-align
 
   .inner
+    width: 100%
     +xy-align
     svg
       fill: $green
@@ -131,7 +133,7 @@
       text-transform: uppercase
       letter-spacing: 5px
       line-height: 1
-      margin: 10px 0
+      margin: 10px auto
       width: 1200px
       max-width: 100%
       @media #{$small-only}
@@ -146,7 +148,9 @@
     .banner-title
       font-size: 40px
       @media #{$small-only}
-        font-size: 32px
+        font-size: 21px
+      @media screen and (max-width: 320px)
+        font-size: 18px
       @media screen and (min-width: 1920px)
         font-size: 48px
 
